@@ -31,7 +31,7 @@
     <td>
       <strong>
 	Download _("<a href='%s'>the installer</a>",
-	"http://lilypond.org/download/binaries/linux-x86/lilypond-@v2.8-linux-x86-VERSION@.linux.sh");
+	"@v2.8-linux-x86-URL@");
 	<br>
 	</strong>
 	<em>do <tt>sh lilypond-X.Y.Z.linux.sh</tt> in a command window.</em>
@@ -79,7 +79,7 @@
     <td>
       <strong>
 	Download _("<a href='%s'>the installer</a>",
-	"http://lilypond.org/download/binaries/freebsd-x86/lilypond-@v2.8-freebsd-x86-VERSION@.freebsd.sh");
+	"@v2.8-freebsd-x86-URL@");
 	<br>
 	</strong>
 	<em>do <tt>sh lilypond-X.Y.Z.freebsd.sh</tt> in a command window.</em>
@@ -99,7 +99,7 @@
     <td>
       <strong>
 	_("Download <a href='%s'>%s</a>",
-	  "http://lilypond.org/download/binaries/darwin-ppc/lilypond-@v2.8-darwin-ppc-VERSION@.darwin-ppc.tar.bz2",
+	  "@v2.8-darwin-ppc-URL@",
  	  "LilyPond")
       </strong>
     </td>
@@ -120,7 +120,7 @@
     <td>
       <strong>
 	_("Download <a href='%s'>%s</a>",
-	  "http://lilypond.org/download/binaries/darwin-x86/lilypond-@v2.8-darwin-ppc-VERSION@.darwin-x86.tar.bz2",
+	  "@v2.8-darwin-ppc-URL@",
  	  "LilyPond")
       </strong>
     </td>
@@ -139,7 +139,7 @@
     <td>
       <strong>
 	_("<a href='%s'>Install</a>",
- 	  "http://lilypond.org/download/binaries/mingw/lilypond-@v2.8-mingw-VERSION@.mingw.exe")
+ 	  "@v2.8-mingw-URL@")
       </strong>
     </td>
     <td>@v2.8-mingw-VERSION@</td>
@@ -154,7 +154,7 @@
     <td>
       <strong>
 	_("Download <a href='%s'>tarball</a>",
-	"http://lilypond.org/download/binaries/documentation/lilypond-@v2.8-documentation-VERSION@.documentation.tar.bz2")
+	"@v2.8-documentation-URL@")
       </strong>
     </td>
     <td>@v2.8-documentation-VERSION@</td>
@@ -169,7 +169,7 @@
     <td>
       <strong>
 	_("Download <a href='%s'>tarball</a>",
-	"http://lilypond.org/download/v2.8/lilypond-@v2.8-source-VERSION@.tar.gz")
+	"@v2.8-source-URL@")
 	(<a href="../devel/#warning">_("warning")</a>)
       </strong>
     </td>
